# ka3d

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  index.html
data/shaders/ps_2_0/level/: bump-alpha.fx  bump-glow-refl.fx  bump-glow.fx  bump-selfillum.fx  bump.fx  diff-tex.fx  parallax.fx  unlit-tex-alpha-nofog.fx  unlit-tex-alpha.fx  unlit-tex-glow.fx
docs/: index.html
include/config/msvc17/: stdint.h
samples/: CMakeLists.txt
samples/gameobjects/: CMakeLists.txt  gameobjects.vcxproj  gameobjects.vcxproj.filters
samples/tutorials/character_animation/: CMakeLists.txt  character_animation.sln  character_animation.vcxproj  character_animation.vcxproj.filters  character_animation_msvc7.sln
samples/tutorials/draw_triangle/: CMakeLists.txt  draw_triangle.sln  draw_triangle.vcxproj  draw_triangle.vcxproj.filters  draw_triangle_msvc7.sln
samples/tutorials/particle_rendering/: CMakeLists.txt  particle_rendering.sln  particle_rendering.vcxproj  particle_rendering.vcxproj.filters  particle_rendering_msvc7.sln
samples/tutorials/physics_simulation/: CMakeLists.txt  physics_simulation.sln  physics_simulation.vcxproj  physics_simulation.vcxproj.filters  physics_simulation_msvc7.sln
samples/tutorials/postprocessing_glow/: CMakeLists.txt  postprocessing_glow.sln  postprocessing_glow.vcxproj  postprocessing_glow.vcxproj.filters
samples/tutorials/scene_animation/: CMakeLists.txt  scene_animation.sln  scene_animation.vcxproj  scene_animation.vcxproj.filters  scene_animation_msvc7.sln
samples/tutorials/scene_hierarchies/: CMakeLists.txt  scene_hierarchies.sln  scene_hierarchies.vcxproj  scene_hierarchies.vcxproj.filters  scene_hierarchies_msvc7.sln
samples/tutorials/using_transforms/: CMakeLists.txt  using_transforms.sln  using_transforms.vcxproj  using_transforms.vcxproj.filters  using_transforms_msvc7.sln
samples/zaxdemo/: CMakeLists.txt  zaxdemo.sln  zaxdemo.vcxproj  zaxdemo.vcxproj.filters  zaxdemo_msvc7.sln
source/: CMakeLists.txt
source/framework/: CMakeLists.txt
source/gr/: CMakeLists.txt
source/gr/dx/: CMakeLists.txt
source/hgr/: CMakeLists.txt  Node.cpp
source/img/: CMakeLists.txt
source/io/: CMakeLists.txt
source/lang/: CMakeLists.txt
source/lua/: CMakeLists.txt
source/math/: CMakeLists.txt
source/ode/: CMakeLists.txt
tools/: CMakeLists.txt
tools/docs/: hgrexport-3dsmax.txt  hgrviewer.txt  tools_install.txt
tools/include/lightmappacker/: Combined.h  LightMap.h  LightMapPacker.h  ProgressInterface.h  Rect.h  Triangle.h  test.h
tools/include/maxexport/: ArrayUtil.h  ColorUtil.h  DialogItem.h  ExportTriangle.h  ExportVertex.h  ExportWeightMap.h  INodeUtil.h  Matrix3Util.h  MtlUtil.h  MyCamera.h  MyDummy.h  MyGeometry.h  MyLight.h  MyMaterial.h  MyMesh.h  MyNode.h  MyPrimitive.h  MySceneExport.h  MySceneExportClassDesc.h  MyShape.h  NVMeshMenderEx.h  OptionInterface.h  ParamBlockUtil.cpp  ParamBlockUtil.h  PhysiqueUtil.h  ProgressDialog.h  SilentQuit.h  SkinUtil.h  StdAfx.h  StdMatUtil.h  TextureGeneratorInterface.h  WorldUnitsRescale.h  maxexport.h  maxexportconfig.h  version.h
tools/include/sceneviewer/: MainFrm.h  font.h  sceneviewer.h  sceneviewerDoc.h  sceneviewerView.h  stdafx.h  version.h
tools/scripts/: bak.lua  make_data_build.bat  make_maxexport_build.bat  make_sceneviewer_build.bat  make_shaders_build.bat  vername.lua
tools/source/2ntx/: 2ntx.cpp  CMakeLists.txt  convertToNTX.cpp  convertToNTX.h
tools/source/lightmappacker/: CMakeLists.txt  Combined.cpp  LightMap.cpp  LightMapPacker.cpp  Rect.cpp  Triangle.cpp  test.cpp
tools/source/maxexport/: ExportTriangle.cpp  ExportVertex.cpp  ExportWeightMap.cpp  INodeUtil.cpp  Matrix3Util.cpp  MtlUtil.cpp  MyCamera.cpp  MyDummy.cpp  MyGeometry.cpp  MyLight.cpp  MyMaterial.cpp  MyMesh.cpp  MyNode.cpp  MyPrimitive.cpp  MySceneExport.cpp  MySceneExportClassDesc.cpp  MyShape.cpp  NVMeshMenderEx.cpp  PhysiqueUtil.cpp  ProgressDialog.cpp  SkinUtil.cpp  StdMatUtil.cpp  WorldUnitRescale.cpp  maxexport.cpp
tools/source/sceneviewer/: CMakeLists.txt  MainFrame.cpp  SceneViewerDoc.cpp  SceneViewerView.cpp  comic_sans_ms_20x23.cpp  sceneviewer.cpp  stdafx.cpp
