add_subdirectory(tutorials/character_animation)
add_subdirectory(tutorials/draw_triangle)
add_subdirectory(tutorials/particle_rendering)
add_subdirectory(tutorials/physics_simulation)
add_subdirectory(tutorials/postprocessing_glow)
add_subdirectory(tutorials/scene_animation)
add_subdirectory(tutorials/scene_hierarchies)
add_subdirectory(tutorials/using_transforms)
add_subdirectory(gameobjects)
add_subdirectory(zaxdemo)